bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:3: error: not found: value <=
    case (Math.abs(n-100) <= 10) => true
                          ^NearHundred:3: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case (Math.abs(n-100) <= 10) => true
               ^NearHundred:3: error: not found: value -
    case (Math.abs(n-100) <= 10) => true
                    ^NearHundred:4: error: not found: value <=
    case (Math.abs(n-200) <= 10) => true
                          ^NearHundred:4: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case (Math.abs(n-200) <= 10) => true
               ^NearHundred:4: error: not found: value -
    case (Math.abs(n-200) <= 10) => true
                    ^