bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case (Math.abs(n-100) <= 10) => true
    case (Math.abs(n-200) <= 10) => true
    case (_) => false
  }
}